# egui_mobius

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  VERSIONING.md  config.json  dist-workspace.toml
crates/egui_3d_viewer/: Cargo.toml
crates/egui_3d_viewer/src/: axes.rs  camera.rs  citizen.rs  grid.rs  lib.rs  mesh.rs  renderer.rs  state.rs
crates/egui_citizen/: Cargo.toml  README.md
crates/egui_citizen/src/: citizen.rs  dispatcher.rs  lib.rs  message.rs  state.rs
crates/egui_grafica/: Cargo.toml  README.md
crates/egui_grafica/src/: citizen.rs  export.rs  geometry.rs  icons.rs  inspector.rs  interact.rs  lang.rs  lib.rs  model.rs  page.rs  registry.rs  render.rs  router.rs
crates/egui_grafica/src/gpu/: canvas.wgsl  edges.wgsl  mod.rs  nodes.wgsl
crates/egui_lens/: Cargo.toml
crates/egui_lens/src/: lib.rs  logger.rs  logger_colors.rs  payload.rs
crates/egui_mobius/: Cargo.toml  config.json  ui_session_log.txt
crates/egui_mobius/src/: dispatching.rs  factory.rs  lib.rs  macros.rs  reactive.rs  runtime.rs  signals.rs  slot.rs  types.rs
crates/egui_mobius_components/: Cargo.toml  README.md
crates/egui_mobius_components/src/: lib.rs  prelude.rs
crates/egui_mobius_components/src/components/: mod.rs  prelude.rs
crates/egui_mobius_derive/: Cargo.toml
crates/egui_mobius_derive/src/: lib.rs
crates/egui_mobius_derive/tests/: derive.rs
crates/egui_mobius_derive/tests/fixtures/: test_widget.rs
crates/egui_mobius_macros/: Cargo.toml  README.md
crates/egui_mobius_macros/src/: lib.rs
crates/egui_mobius_reactive/: Cargo.toml  README.md
crates/egui_mobius_reactive/src/: lib.rs
crates/egui_mobius_reactive/src/reactive/: core.rs  derived.rs  dynamic.rs  mod.rs  prelude.rs  reactive_math.rs  reactive_state.rs  registry.rs  value.rs  widgets.rs
crates/egui_mobius_widgets/: Cargo.toml
crates/egui_mobius_widgets/src/: lib.rs  stateful_button.rs  styled_button.rs
crates/egui_quill/: Cargo.toml
crates/egui_quill/src/: editor.rs  lib.rs  state.rs
crates/egui_quill/syntaxes/: Graphica.sublime-syntax  OpenSCAD.sublime-syntax  TOML.sublime-syntax
crates/mobius_egui/: Cargo.toml
crates/mobius_egui/src/: factory.rs  lib.rs  macros.rs  signals.rs  types.rs
examples/: Cargo.toml  README.md  app_ui.rs  create_cargo_tomls.sh  lib.rs  simple_monitor.rs
examples/citizen_dock/: Cargo.toml
examples/citizen_dock/src/: main.rs
examples/citizen_fetch/: Cargo.toml
examples/citizen_fetch/src/: main.rs
examples/citizen_signal_async/: Cargo.toml  task_findings.md  task_plan.md  task_progress.md
examples/citizen_signal_async/src/: backend.rs  dispatcher.rs  main.rs  messages.rs  state.rs  tabs.rs
examples/citizen_signal_async/src/panels/: control.rs  logger.rs  mod.rs  result.rs
examples/clock_async/: Cargo.toml  README.md  lib.rs  log_colors.json  main.rs  types.rs
examples/clock_async/src/: default_config.ron  lib.rs  logger.rs  main.rs  state.rs  types.rs
examples/clock_async/src/ui/: control_panel.rs  logger_panel.rs  mod.rs
examples/clock_reactive/: Cargo.toml  README.md  config.json
examples/clock_reactive/src/: main.rs  runtime_integration.rs  state.rs  types.rs
examples/clock_reactive/src/ui/: control_panel.rs  logger_panel.rs
examples/dashboard/: Cargo.toml  README.md  main.rs  ui_session_log.txt
examples/dashboard/src/: main.rs
examples/dashboard_async/: Cargo.toml  README.md  main.rs
examples/dashboard_async/src/: blaze_fpga.code-workspace  main.rs
examples/dispatcher_signals_slots/: Cargo.toml
examples/dispatcher_signals_slots/src/: main.rs
examples/egui_crux_example/: Cargo.toml
examples/egui_crux_example/backend/: Cargo.toml
examples/egui_crux_example/backend/src/: lib.rs  view_renderer.rs
examples/egui_crux_example/frontend/: Cargo.toml
examples/egui_crux_example/frontend/src/: backend_core.rs  main.rs  ui_app.rs  ui_commands.rs
examples/egui_crux_example/project/: Cargo.toml
examples/egui_crux_example/project/src/: lib.rs
examples/egui_crux_example/shared_types/: Cargo.toml
examples/egui_crux_example/shared_types/src/: lib.rs
examples/filter_plotter/: Cargo.toml  README.md  Trunk.toml  WASM_BUILD_GUIDE.md  build_wasm.ps1  config.json  index.html
examples/filter_plotter/src/: dispatcher.rs  main.rs  messages.rs  state.rs  tabs.rs  theme.rs
examples/filter_plotter/src/backend/: iir.rs  mod.rs
examples/filter_plotter/src/panels/: editor.rs  logger.rs  (+4 more)
examples/getting_started/: Cargo.toml
examples/getting_started/src/: main.rs
examples/grafica_quad_cluster/: Cargo.toml
examples/grafica_quad_cluster/src/: main.rs
examples/logger_component/: Cargo.toml  README.md
examples/logger_component/src/: main.rs
examples/masonry-reactive/: Cargo.toml  README.md
examples/masonry-reactive/src/: main.rs
examples/mobius-widget/: Cargo.toml  README.md
examples/mobius-widget/src/: main.rs
examples/reactive/: Cargo.toml  README.md
examples/reactive/src/: main.rs
examples/reactive_slider/: Cargo.toml
examples/reactive_slider/src/: main.rs
examples/realtime_plot/: Cargo.toml  README.md  main.rs
examples/realtime_plot/assets/: create_image.py  half_bridge.txt
examples/realtime_plot/src/: main.rs
examples/serial_monitor/: Cargo.toml
examples/signals_slots/: Cargo.toml  README.md
examples/signals_slots/src/: main.rs
examples/signals_slots/wix/: main.wxs
examples/simple_monitor/: Cargo.toml  README.md
examples/simple_monitor/src/: app_ui.rs  main.rs  ui_app.rs
examples/simple_monitor/wix/: main.wxs
examples/simple_monitor_2/: Cargo.toml  README.md
examples/simple_monitor_2/src/: main.rs  ui_app.rs
examples/simple_monitor_2/wix/: main.wxs
examples/styled_buttons/: Cargo.toml  README.md
examples/styled_buttons/src/: main.rs
examples/subscriber/: Cargo.toml  README.md  main.rs
examples/subscriber/src/: main.rs
examples/ui_refresh/: Cargo.toml
examples/ui_refresh/src/: main.rs
examples/ui_refresh_events/: Cargo.toml  README.md
examples/ui_refresh_events/src/: main.rs
examples/viewer3d_csgrs/: Cargo.toml
examples/viewer3d_csgrs/src/: main.rs
(+119 files in other folders)
