cargo-features = ["edition2024"]

[workspace]
members = [ "crates/egui_mobius", "crates/egui_mobius_macros", "crates/egui_mobius_widgets",
    "examples/*",
    "tools/*",
]
exclude = [
    # this example has its own workspace
    "examples/egui_crux_example"
]

resolver = "2"

[workspace.dependencies]
# egui mobius related crates
egui_mobius   = { path = "crates/egui_mobius" }
egui_mobius_widgets = { path = "crates/egui_mobius_widgets" }
egui_mobius_macros = { path = "crates/egui_mobius_macros" }

# egui and eframe
egui = "0.31.1"
eframe = { version = "0.31.1", default-features = false }
egui-winit = { version = "0.31.1", features = ["accesskit"] }
egui_extras = "0.31.1"
egui_taffy = "0.7.0"
# random number generation, useful for testing and examples
rand = "0.9.0"

# async support
tokio = "1.43.0"

# logging and environment
log = "0.4"
env_logger = "0.9"

# date and time
chrono = "0.4.40"

# utilities
lazy_static = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
dirs = "5.0"

# windowing
winit = "0.30.9"

# alternative to std::sync::mpsc
crossbeam-channel = "0.5.14"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"


