[workspace]
members = [ "crates/egui_mobius", "crates/egui_mobius_widgets",
    "crates/egui_mobius_reactive", "crates/egui_mobius_components",
    "crates/egui_citizen",
    "crates/egui_lens",
    "crates/egui_quill",
    "crates/egui_grafica",
    "crates/egui_3d_viewer",
    "examples/clock_async",
    "examples/clock_reactive",
    "examples/dashboard",
    "examples/dashboard_async",
    "examples/reactive",
    "examples/reactive_slider",
    "examples/realtime_plot",
    "examples/ui_refresh_events",
    "examples/logger_component",
    "examples/citizen_dock",
    "examples/citizen_fetch",
    "examples/filter_plotter",
    "examples/getting_started",
    "examples/citizen_signal_async",
    "examples/grafica_quad_cluster",
    "examples/viewer3d_csgrs",
    "examples"
]
# exclude = [
    # this example has its own workspace
#    "examples/egui_crux_example"
#]

resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"
version = "0.4.0"

[workspace.dependencies]
# egui mobius related crates
egui_mobius   = { version = "0.4.0", path = "crates/egui_mobius" }
egui_mobius_widgets = { version = "0.4.0", path = "crates/egui_mobius_widgets" }
egui_mobius_reactive = { version = "0.4.0", path = "crates/egui_mobius_reactive" }
egui_mobius_components = { version = "0.4.0", path = "crates/egui_mobius_components" }
egui_citizen = { version = "0.4.0", path = "crates/egui_citizen" }
egui_lens = { version = "0.4.0", path = "crates/egui_lens" }
egui_quill = { version = "0.4.0", path = "crates/egui_quill" }
egui_grafica = { version = "0.4.0", path = "crates/egui_grafica" }
egui_3d_viewer = { version = "0.4.0", path = "crates/egui_3d_viewer" }

# Exact-geometry kernel — the geometry foundation for egui_grafica's
# routing and shapes (timschmidt's hyper ecosystem).
hypercurve = "0.2"

# egui and eframe
egui_plot = "0.35.0"
egui = "0.34"
egui-phosphor = "0.12"
eframe = { version = "0.34", default-features = false }
egui-winit = { version = "0.34", features = ["accesskit"] }
egui_extras = "0.34.0"
egui_taffy = "0.12.0"
egui_dock = "0.19"

# random number generation, useful for testing and examples
rand = "0.9.0"

# async support
tokio = "1.52.1"

# logging and environment
log = "0.4"
env_logger = "0.9"

# date and time
chrono = "0.4.40"

# utilities
lazy_static = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
dirs = "5.0"
rfd = "0.14"

# windowing
winit = "0.30.11"

# alternative to std::sync::mpsc
crossbeam-channel = "0.5.14"

# Release profile — tuned for size + runtime, primarily for the wasm
# Pages deploy of filter_plotter but applies to native release builds
# too (smaller binaries, marginally faster execution).
#
# opt-level = "s" — size-focused but not as aggressive as "z" (egui's
# render path keeps its runtime perf with "s"; "z" measurably hurts
# UI smoothness).
[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = "symbols"
debug-assertions = false
overflow-checks = false
panic = "abort"
incremental = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.lints.rust]
unsafe_code = "deny"

elided_lifetimes_in_paths = "warn"
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_prelude_collisions = "warn"
semicolon_in_expressions_from_macros = "warn"
trivial_numeric_casts = "warn"
unexpected_cfgs = "warn"
unsafe_op_in_unsafe_fn = "warn"                         # `unsafe_op_in_unsafe_fn` may become the default in future Rust versions: https://github.com/rust-lang/rust/issues/71668
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
