[package]
name = "egui_mobius_examples"
version = "0.1.0"
edition = "2021"
publish = false
description = "Examples demonstrating egui_mobius features"

[lib]
path = "lib.rs"

[dependencies]
egui_mobius = { path = "../crates/egui_mobius" }
egui_mobius_widgets = { path = "../crates/egui_mobius_widgets" }
egui_mobius_reactive = { path = "../crates/egui_mobius_reactive" }
egui = { version = "0.32.0" }
eframe = { version = "0.32.0", default-features = false }
tokio = { version = "1.43.0", features = ["full"] }
egui_plot = { version = "0.33.0" }
#egui_taffy = "0.7.0"
egui_taffy = { git = "https://github.com/makerpnp/egui_taffy", rev = "c14e390c1f3cd6487968c5845ea205a38c6afbe2" }
rand = "0.9.0"
chrono = "0.4.40"
tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.9"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
lazy_static = "1.5.0"
image = "0.25.5"

[[example]]
name = "clock_async"
path = "clock_async/src/main.rs"

[[example]]
name = "dashboard"
path = "dashboard/src/main.rs"

[[example]]
name = "dashboard_async"
path = "dashboard_async/src/main.rs"

[[example]]
name = "reactive"
path = "reactive/src/main.rs"

[[example]]
name = "realtime_plot"
path = "realtime_plot/src/main.rs"

[[example]]
name = "ui_refresh_events"
path = "ui_refresh_events/src/main.rs"


