[package]
name                   = "egui_3d_viewer"
version.workspace      = true
authors                = ["James Bonanno <atlantix-eda@proton.me>"]
description            = "Reactive 3D viewer citizen for egui_mobius applications — glow-based, wasm-portable via WebGL2"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
homepage               = "https://github.com/saturn77/egui_mobius"
repository             = "https://github.com/saturn77/egui_mobius"
categories             = ["gui", "graphics", "rendering"]
keywords               = ["egui", "3d", "glow", "opengl", "egui-mobius"]
include                = ["**/*.rs", "Cargo.toml"]

[dependencies]
egui                  = { workspace = true }
egui_mobius_reactive  = { workspace = true }
egui_citizen          = { workspace = true }

# Hand-rolled OpenGL via egui_glow's PaintCallback. Glow gives portable
# GL bindings (native + WebGL2 for wasm); egui_glow integrates a glow
# context with egui's render loop.
# Pin glow to the same version egui_glow 0.34 uses, otherwise the
# `glow::Context` exposed by `painter.gl()` inside the egui paint
# callback resolves to a different `HasContext` trait than the one
# our renderer code imports — every gl method call fails to resolve.
egui_glow             = { version = "0.34", default-features = false }
glow                  = "0.17"

# Math + buffer plumbing for the renderer.
nalgebra              = "0.33"
bytemuck              = { version = "1", features = ["derive"] }
