#cargo-features = ["edition2024"]
[package]
name        = "egui_mobius"
version     = "0.3.0-alpha.9"
edition     = "2024"
repository  = "https://github.com/saturn77/egui_mobius"
authors     = ["James Bonanno <atlantix-eda@proton.me>"]
description = "A modular construction framework for egui applications"
license     = "MIT"
keywords    = ["egui", "eframe", "mobius", "framework", "gui", "ui", "graphics"]
categories  = ["graphics", "ui", "framework", "gui"]
readme      = "README.md"


[dependencies]
egui = "0.31.1"
eframe = { version = "0.31.1", default-features = false, features = [
    "default_fonts", 
    "glow",          
    "wayland",
    "accesskit"
] }
priority-queue = "2.1.2"
rand = "0.9.0"
tokio = {version = "1.43.0", features = ["full"]}
futures = "0.3"
winit = "0.30.9"
crossbeam-channel = "0.5.14"
serde = { version = "1.0.218", optional = true }
egui_mobius_macros = {workspace = true} # Add the correct version of the crate

[features]
serde = ["serde/derive"]


[lib]
name = "egui_mobius"
crate-type = ["lib"]
