#cargo-features = ["edition2024"]
[package]
name                   = "egui_mobius"
version= "0.3.0-alpha.19"
authors                = ["James Bonanno <atlantix-eda@proton.me>"]
description            = "A modular construction framework for egui applications"
edition.workspace      = true
rust-version.workspace = true
homepage               = "https://github.com/saturn77/egui_mobius"
license.workspace      = true
readme                 = "../../README.md"
repository             = "https://github.com/saturn77/egui_mobius"
categories             = ["gui", "development-tools", "development-tools::build-utils"]
keywords               = ["egui-framework", "eframe", "egui-example", "desktop"]
include                = ["LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[dependencies]
egui = "0.31.1"
eframe = { version = "0.31.1", default-features = false, features = [
    "default_fonts", 
    "glow",          
    "wayland",
    "accesskit"
] }
priority-queue = "2.1.2"
rand = "0.9.0"
tokio = {version = "1.43.0", features = ["full"]}
futures = "0.3"
winit = "0.30.9"
crossbeam-channel = "0.5.14"
serde = { version = "1.0.218", optional = true }

[features]
serde = ["serde/derive"]


[lib]
name = "egui_mobius"
crate-type = ["lib"]
