#cargo-features = ["edition2024"]
[package]
name                   = "egui_mobius"
version= "0.3.0-alpha.31"
authors                = ["James Bonanno <atlantix-eda@proton.me>"]
description            = "A modular construction framework for egui applications"
edition.workspace      = true
rust-version.workspace = true
homepage               = "https://github.com/saturn77/egui_mobius"
license.workspace      = true
readme                 = "../../README.md"
repository             = "https://github.com/saturn77/egui_mobius"
categories             = ["gui", "development-tools", "development-tools::build-utils"]
keywords               = ["egui-framework", "eframe", "egui-example", "desktop"]
include                = ["LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[dependencies]
tokio = {version = "1.43.0", features = ["full"]}
futures = "0.3"
serde = { version = "1.0.218", optional = true }

[features]
serde = ["serde/derive"]


[lib]
name = "egui_mobius"
crate-type = ["lib"]
