[package]
name = "egui_mobius_components"
version.workspace = true
edition = "2024"
description = "UI components for egui_mobius framework"
authors = ["James <atlantix-eda@proton.me>"]


[dependencies]
# From workspace
egui = {workspace = true}
eframe = {workspace = true}
egui_mobius = {workspace = true}
egui_mobius_reactive = {workspace = true}

chrono      = {workspace = true}
serde       = {workspace = true}

lazy_static = { workspace = true }
dirs        = { workspace = true }
serde_json  = { workspace = true }

# Other dependencies
instant = "0.1.12"
once_cell = "1.19"
indicatif = "0.17.8"

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1.35", features = ["full"] }
egui_dock   = "0.10.0"

[lib]
crate-type = ["rlib"]