[package]
name = "egui_mobius_components"
version.workspace = true
edition = "2024"
description = "UI components for egui_mobius framework"
authors = ["James <atlantix-eda@proton.me>"]
license = "MIT"
repository = "https://github.com/saturn77/egui_mobius"
homepage = "https://github.com/saturn77/egui_mobius"
documentation = "https://docs.rs/egui_mobius_components"
readme = "README.md"
keywords = ["gui", "egui", "components", "ui", "widgets"]
categories = ["gui", "visualization"]


[dependencies]
# From workspace
egui = {workspace = true}
eframe = {workspace = true}
egui_mobius = {workspace = true}

chrono      = {workspace = true}
serde       = {workspace = true}

lazy_static = { workspace = true }
dirs        = { workspace = true }
serde_json  = { workspace = true }

[dev-dependencies]

[lib]
crate-type = ["rlib"]