[package]
name = "egui_mobius_derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
egui_mobius_reactive = {workspace = true}

[dev-dependencies]
trybuild = "1.0"
egui_mobius_reactive = {workspace = true}
