[package]
name                   = "egui_mobius_macros"
version.workspace      = true
authors                = ["James Bonanno <atlantix-eda@proton.me>"]
description            = "Template for future procedural macros in the egui_mobius framework"
edition.workspace      = true
rust-version.workspace = true
homepage               = "https://github.com/saturn77/egui_mobius"
license.workspace      = true
readme                 = "README.md"
repository             = "https://github.com/saturn77/egui_mobius"
categories             = ["gui", "framework", "desktop"]
keywords               = ["egui-framework", "eframe", "egui-example", "desktop", "procedural-macro"]
include                = ["../LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[dependencies]
syn = { version = "2.0", features = ["derive", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true
