[package]
name = "egui_mobius_reactive"
version = "0.3.0-alpha.15"
edition = "2024"
description = "A thread-safe reactive state management system for egui_mobius"
license = "MIT"
authors = ["The egui_mobius contributors"]
repository = "https://github.com/saturn77/egui_mobius"
documentation = "https://docs.rs/egui_mobius_reactive"

[dependencies]
parking_lot = "0.12"

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1.35", features = ["full"] }
