[package]
name                   = "egui_mobius_reactive"
version= "0.3.0-alpha.25"
authors                = ["James Bonanno <atlantix-eda@proton.me>"]
description            = "A thread-safe reactive state management system for egui_mobius"
edition.workspace      = true
rust-version.workspace = true
homepage               = "https://github.com/saturn77/egui_mobius"
license.workspace      = true
readme                 = "../../README.md"
repository             = "https://github.com/saturn77/egui_mobius"
categories             = ["gui", "development-tools"]
keywords               = ["egui-framework", "eframe", "egui-example", "desktop", "reactive"]
include                = ["LICENSE-MIT", "**/*.rs", "Cargo.toml"]


[dependencies]
parking_lot = "0.12"

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1.35", features = ["full"] }
