[package]
name        = "egui_mobius_widgets"
version     = "0.3.0-alpha.7"
edition     = "2021"
repository  = "https://github.com/saturn77/egui_mobius"
authors     = ["James Bonanno <atlantix-eda@proton.me>"]
description = "A modular construction framework for egui applications"
license     = "MIT"
keywords    = ["egui", "eframe", "mobius", "framework", "gui"]
categories  = ["graphics", "ui", "framework", "gui"]
readme      = "README.md"

[dependencies]
egui_mobius = { workspace = true }
egui = { workspace = true }
eframe = { workspace = true, default-features = false, features = [
    "default_fonts", 
    "glow",          
    "wayland",       
] }
serde = { version = "1.0.218", optional = true }

[features]
serde = ["serde/derive"]

[lib]
name = "egui_mobius_widgets"
crate-type = ["lib"]
