[package]
name                   = "egui_mobius_widgets"
version= "0.3.0-alpha.16"
authors                = ["James Bonanno <atlantix-eda@proton.me>"]
description            = "A widget library for egui_mobius"
edition.workspace      = true
rust-version.workspace = true
homepage               = "https://github.com/saturn77/egui_mobius"
license.workspace      = true
readme                 = "../../README.md"
repository             = "https://github.com/saturn77/egui_mobius"
categories             = ["gui", "framework", "desktop"]
keywords               = ["egui-framework", "eframe", "egui-example", "desktop", "widget"]
include                = ["LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[dependencies]
egui_mobius = { workspace = true }
egui = { workspace = true }
eframe = { workspace = true, default-features = false, features = [
    "default_fonts", 
    "glow",          
    "wayland",       
] }
serde = { version = "1.0.218", optional = true }

[features]
serde = ["serde/derive"]

[lib]
name = "egui_mobius_widgets"
crate-type = ["lib"]
