#cargo-features = ["edition2024"]
[package]
name = "mobius_egui"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.31.0"
eframe = { version = "0.31.0", default-features = false, features = [
    "default_fonts", 
    "glow",          
    "wayland",       
] }
rand = "0.9.0"
tokio = {version = "1.43.0", features = ["full"]}
winit = "0.30.9"
crossbeam-channel = "0.5.14"

[lib]
name = "mobius_egui"
crate-type = ["lib"]
