[package]
name    = "citizen_fetch"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
eframe = { workspace = true, features = ["default"] }
egui = { workspace = true }
egui_dock = { workspace = true }
egui_citizen = { workspace = true }
egui_extras = { version = "0.33.0", features = ["image"] }
crossbeam-channel = "0.5"
ureq = "2.10"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
