[package]
name = "clock_async"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
egui_taffy = { workspace = true }
egui_mobius = { path = "../../crates/egui_mobius" }
egui_mobius_widgets = { path = "../../crates/egui_mobius_widgets" }
egui = { workspace = true }
eframe = { workspace = true, features = ["glow"] }
tokio = { version = "1", features = ["full"] }
serde = { workspace = true }
serde_json = "1.0"
chrono = "0.4"
