[package]
name = "clock_reactive"
version = "0.1.0"
edition = "2021"

[dependencies]
egui_taffy = { workspace = true }
egui_mobius = { path = "../../crates/egui_mobius" }
egui_mobius_widgets = { path = "../../crates/egui_mobius_widgets" }
egui_mobius_reactive = { path = "../../crates/egui_mobius_reactive" }
egui = "0.31.1"
eframe = "0.31.1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11.7"
log = "0.4.26"
