[package]
name = "dashboard"
version = "0.1.0"
edition = "2024"
repository  = "https://github.com/saturn77/egui_mobius"
authors     = ["James Bonanno <atlantix-eda@proton.me>"]
description = "A Mobius strip in egui"
license     = "MIT"
keywords    = ["egui", "eframe", "mobius", "framework", "gui", "ui", "graphics"]
categories  = ["graphics", "ui", "framework", "gui"]
readme      = "README.md"

[dependencies]
egui_mobius = { workspace = true }
as_command_derive = { workspace = true }
egui = { workspace = true }
eframe = { workspace = true, default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
] }
rand = { workspace = true }
log = "0.4"
env_logger = "0.9"
chrono = "0.4.40"
lazy_static = "1.5.0"

[[bin]]
name = "dashboard"
path = "src/main.rs"
