[package]
name = "dashboard"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
egui_mobius = { path = "../../crates/egui_mobius" }
egui_mobius_widgets = { path = "../../crates/egui_mobius_widgets" }
egui = "0.31.1"
eframe = "0.31.1"
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
rand = "0.8"
lazy_static = "1.4.0"
