[package]
name = "dashboard_async"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
egui_mobius = { path = "../../crates/egui_mobius" }
egui = { workspace = true }
eframe = { workspace = true, features = ["glow"] }
serde = { workspace = true }
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }