#cargo-features = ["edition2024"]
[package]
name = "dispatcher_signals_slots"
version = "0.1.0"
edition = "2024"
repository  = "https://github.com/saturn77/egui_mobius"
authors     = ["James Bonanno <atlantix-eda@proton.me>"]
description = "A Mobius strip in egui"
license     = "MIT"
keywords    = ["egui", "eframe", "mobius", "framework", "gui", "ui", "graphics"]
categories  = ["graphics", "ui", "framework", "gui"]
readme      = "README.md"

[dependencies]
#crossbeam = {version = "0.8.4", features= ["crossbeam-channel"]}
egui_mobius = { workspace = true }

[[bin]]
name = "dispatcher_signals_slots"
path = "src/main.rs"
