[workspace]
members = ["backend", "frontend", "project", "shared_types"]
resolver = "1"

[workspace.dependencies]
project = { path = "project" }
backend = { path = "backend" }
shared_types = { path = "shared_types" }

crux_core = { version = "0.12.0" }

log = "0.4.26"
env_logger = "0.11"

mobius_egui = { path = "../../crates/mobius_egui" }

# sync the versions of these with the main workspace
egui = "0.31.0"
eframe = { version = "0.31.0", default-features = false }
rand = "0.9.0"
tokio = "1.43.0"
winit = "0.30.9"
crossbeam-channel = "0.5.14"
serde = "1.0.218"
