[workspace]
members = ["backend", "frontend", "project", "shared_types"]
resolver = "1"
repository = "https://github.com/saturn77/egui_mobius"
authors     = ["Dominic Clifton"]
description = "A Mobius strip in egui"
license     = "MIT"
keywords    = ["egui", "eframe", "mobius", "framework", "gui", "ui", "graphics"]
categories  = ["graphics", "ui", "framework", "gui"]
readme      = "README.md"

[workspace.dependencies]
project = { path = "project" }
backend = { path = "backend" }
shared_types = { path = "shared_types" }

crux_core = { version = "0.12.0" }

log = "0.4.26"
env_logger = "0.11"

egui_mobius = { path = "../../crates/egui_mobius" }

# sync the versions of these with the main workspace
egui = "0.31.0"
eframe = { version = "0.31.0", default-features = false }
rand = "0.9.0"
tokio = "1.43.0"
winit = "0.30.9"
crossbeam-channel = "0.5.14"
serde = "1.0.218"
