[package]
name    = "filter_plotter"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
eframe = { workspace = true, features = ["default"] }
egui = { workspace = true }
egui_dock = { workspace = true }
egui_plot = { workspace = true }
egui_citizen = { workspace = true }
egui_mobius_reactive = { workspace = true }
